welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()){
      ^SnakeBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
      if(estFaceMur()){
      ^